--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <form id="imageForm">
     <label for="prompt">Текстовый запрос:</label>
     <input type="text" id="prompt" name="prompt"><br>
+    <label for="negative_prompt">Негативный запрос:</label>
+    <input type="text" id="negative_prompt" name="negative_prompt"><br>
     <label for="steps">Количество шагов:</label>
     <input type="number" id="steps" name="steps" min="1" max="50"><br>
+    <label for="batch_size">Количество генерируемых картинок:</label>
+    <input type="number" id="batch_size" name="batch_size" min="1" max="8"><br>
     <button type="submit">Сгенерировать изображение</button>
 
 </form>
 <div id="imageContainer"></div>
 
 <script src="renderer.js"></script>
+
