--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <label for="negative_prompt">Негативный запрос:</label>
     <input type="text" id="negative_prompt" name="negative_prompt"><br>
     <label for="steps">Количество шагов:</label>
-    <input type="number" id="steps" name="steps" min="1" max="50"><br>
+    <input type="number" id="steps" name="steps" min="1" max="100"><br>
     <label for="batch_size">Количество генерируемых картинок:</label>
     <input type="number" id="batch_size" name="batch_size" min="1" max="8"><br>
+    <input type="checkbox" id="restore_faces" name="restore_faces">
+    <label for="restore_faces">Восстановить лица</label><br>
     <button type="submit">Сгенерировать изображение</button>
 
 </form>
