--- a/index.html
+++ b/index.html
@@ -1,18 +1,50 @@
-<form id="imageForm">
-    <label for="prompt">Текстовый запрос:</label>
-    <input type="text" id="prompt" name="prompt"><br>
-    <label for="negative_prompt">Негативный запрос:</label>
-    <input type="text" id="negative_prompt" name="negative_prompt"><br>
-    <label for="steps">Количество шагов:</label>
-    <input type="number" id="steps" name="steps" min="1" max="100"><br>
-    <label for="batch_size">Количество генерируемых картинок:</label>
-    <input type="number" id="batch_size" name="batch_size" min="1" max="8"><br>
-    <input type="checkbox" id="restore_faces" name="restore_faces">
-    <label for="restore_faces">Восстановить лица</label><br>
-    <button type="submit">Сгенерировать изображение</button>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>app</title>
+    <style>
+        .progress-bar {
+            width: 100%;
+            height: 30px;
+            background-color: #f0f0f0;
+            margin-bottom: 10px;
+        }
+        .progress {
+            height: 100%;
+            background-color: #4caf50;
+            text-align: center;
+            line-height: 30px;
+            color: white;
+        }
+    </style>
+</head>
+<body>
+    <form id="imageForm">
+        <label for="prompt">Текстовый запрос:</label><br>
+        <input type="text" id="prompt" name="prompt"><br>
+        <label for="negative_prompt">Негативный запрос:</label><br>
+        <input type="text" id="negative_prompt" name="negative_prompt"><br>
+        <label for="steps">Количество шагов:</label><br>
+        <input type="number" id="steps" name="steps" min="1" max="100"><br>
+        <label for="batch_size">Количество генерируемых картинок:</label><br>
+        <input type="number" id="batch_size" name="batch_size" min="1" max="8"><br>
+        <input type="checkbox" id="restore_faces" name="restore_faces">
+        <label for="restore_faces">Восстановить лица</label><br>
+        <button type="submit">Сгенерировать изображение</button>
+    </form>
 
-</form>
-<div id="imageContainer"></div>
+    <div class="progress-bar">
+        <progress id="progress" max="100" value="0"></progress>
+        <span id="sampling-step"> </span>/<span id="sampling-steps"> </span>
+        <span id="time-info">00:00</span>
+    </div>    
 
-<script src="renderer.js"></script>
+    <div id="imageContainer"></div>
+
+    <script src="renderer.js"></script>
+</body>
+</html>
+
 
