--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     </style>
 </head>
 <body>
+    <a href="inpaint.html">
+        <button>Inpaint</button><br><br>
+    </a>
     <form id="imageForm">
         <label for="prompt">Текстовый запрос:</label><br>
         <input type="text" id="prompt" name="prompt"><br>
