--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
     <a href="inpaint.html">
         <button>Inpaint</button><br><br>
     </a>
+    <a href="model.html">
+        <button>model</button><br><br>
+    </a>
     <form id="imageForm">
         <label for="prompt">Текстовый запрос:</label><br>
         <input type="text" id="prompt" name="prompt"><br>
