--- a/inpaint.html
+++ b/inpaint.html
@@ -1,97 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Drag and Drop с рисованием и маской</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Drag and Drop с рисованием и маской</title>
 </head>
 <style>
-    #container {
-        display: flex;
-        justify-content: space-between;
-        align-items: flex-start;
-    }
+	#container {
+		display: flex;
+		justify-content: space-between;
+		align-items: flex-start;
+	}
 
-    #left-section {
-        flex: 1;
-        margin-right: 20px;
-    }
+	#left-section {
+		flex: 1;
+		margin-right: 20px;
+	}
 
-    #drop-area {
-        width: 100%;
-        border: 2px dashed #ccc;
-        margin-bottom: 20px;
-        position: relative;
-    }
+	#drop-area {
+		width: 100%;
+		border: 2px dashed #ccc;
+		margin-bottom: 20px;
+		position: relative;
+	}
 
-    #canvas {
-        display: block;
-        margin: 0 auto;
-    }
+	#canvas {
+		display: block;
+		margin: 0 auto;
+	}
 
-    #brush-slider {
-        width: 100px; /* уменьшаем размер ползунка */
-        margin-bottom: 20px;
-    }
+	#brush-slider {
+		width: 100px;
+		margin-bottom: 20px;
+	}
 
-    #undo-button {
-        display: block;
-        width: 100px;
-        margin-bottom: 20px;
-    }
+	#denoising_strength {
+		width: 50px;
+		margin-bottom: 20px;
+	}
 
-    #right-section {
-        flex: 1;
-    }
+	#undo-button {
+		display: block;
+		width: 100px;
+		margin-bottom: 20px;
+	}
+
+	#right-section {
+		flex: 1;
+	}
 </style>
+
 <body>
 
-<div id="container">
-    <div id="left-section">
-        <div id="drop-area" ondrop="drop(event)" ondragover="allowDrop(event)">
-            Перетащите сюда изображение
-            <canvas id="canvas"></canvas>
-        </div>
-        <input type="range" id="brush-slider" min="1" max="20" value="5" step="1">
-        <button id="undo-button">Отменить</button> <!-- кнопка для отмены -->
-    </div>
+	<div id="container">
+		<div id="left-section">
+			<div id="drop-area" ondrop="drop(event)" ondragover="allowDrop(event)">
+				Перетащите сюда изображение
+				<canvas id="canvas"></canvas>
+			</div>
+			<input type="range" id="brush-slider" min="1" max="20" value="5" step="1">
+			<button id="undo-button">Отменить</button>
+		</div>
 
-    <div id="right-section">
-        <button onclick="showMask()">Показать маску</button>
-        <canvas id="mask-canvas"></canvas>
-        <form id="imageForm">
-            <label for="prompt">Текстовый запрос:</label><br>
-            <input type="text" id="prompt" name="prompt"><br>
-            <label for="negative_prompt">Негативный запрос:</label><br>
-            <input type="text" id="negative_prompt" name="negative_prompt"><br>
-            <label for="steps">Количество шагов:</label><br>
-            <input type="number" id="steps" name="steps" min="1" max="100"><br>
-            <label for="batch_size">Количество генерируемых картинок:</label><br>
-            <input type="number" id="batch_size" name="batch_size" min="1" max="8"><br>
-            <input type="checkbox" id="restore_faces" name="restore_faces">
-            <label for="restore_faces">Восстановить лица</label><br>
-            <button type="submit">Сгенерировать изображение</button>
-        </form>
-    
-        <div class="progress-bar">
-            <progress id="progress" max="100" value="0"></progress>
-            <span id="sampling-step"> </span>/<span id="sampling-steps"> </span>
-            <span id="time-info">00:00</span>
-        </div>    
-    
-        <div id="imageContainer"></div>
-    </div>
-</div>
+		<div id="right-section">
+			<button onclick="showMask()">Показать маску</button>
+			<canvas id="mask-canvas"></canvas>
+			<form id="imageForm">
+				<label for="prompt">Текстовый запрос:</label><br>
+				<input type="text" id="prompt" name="prompt"><br>
+				<label for="negative_prompt">Негативный запрос:</label><br>
+				<input type="text" id="negative_prompt" name="negative_prompt"><br>
+				<label for="steps">Количество шагов:</label><br>
+				<input type="number" id="steps" name="steps" min="1" max="100"><br>
+				<label for="batch_size">Количество генерируемых картинок:</label><br>
+				<input type="number" id="batch_size" name="batch_size" min="1" max="8"><br>
+				<input type="checkbox" id="restore_faces" name="restore_faces">
+				<label for="restore_faces">Восстановить лица</label><br>
+				<label for="denoising_strength">Подавление шума</label>
+				<input type="number" id="denoising_strength" min="0.01" max="1.00" value="0.50" step="0.01"><br>
+				<button type="submit">Сгенерировать изображение</button>
+			</form>
 
-<script src="inpaint.js"></script> 
+			<div class="progress-bar">
+				<progress id="progress" max="100" value="0"></progress>
+				<span id="sampling-step"> </span>/<span id="sampling-steps"> </span>
+				<span id="time-info">00:00</span>
+			</div>
+
+			<div id="imageContainer"></div>
+		</div>
+	</div>
+
+	<script src="inpaint.js"></script>
 </body>
+
 </html>
-
-
-
-
-
-
-
-
-
