--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <a href="model.html">
         <button>Выбор модели</button><br><br>
     </a>
+    <a href="upscale.html">
+        <button>Апскейл изображения</button><br><br>
+    </a>
 </body>
 </html>
 
