--- a/txttoimg.html
+++ b/txttoimg.html
@@ -111,7 +111,8 @@
         </div>
     </div>
 
-    <button id="editImageBtn">Редактировать в Inpaint</button>
+    <button id="editInpaint">Редактировать в Inpaint</button>
+    <button id="editImgtoimg">Редактировать в img to img</button>
 
 
     <script src="renderer.js"></script>
