--- a/model.html
+++ b/model.html
@@ -1,7 +1,20 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Выбор модели</title>
+    <style>
+.notification {
+    position: fixed;
+    bottom: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #333;
+    color: #fff;
+    padding: 10px;
+    border-radius: 5px;
+}
+    </style>
 </head>
 <body>
     <h1>Выберите модель для загрузки</h1>
