--- a/upscale.html
+++ b/upscale.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>imgtoimg</title>
+    <title>Upscale</title>
 </head>
 <style>
     #container {
@@ -111,19 +111,10 @@
 
         <div id="right-section">
             <form id="imageForm">
-                <label for="prompt">Текстовый запрос:</label><br>
-                <input type="text" id="prompt" name="prompt"><br>
-                <label for="negative_prompt">Негативный запрос:</label><br>
-                <input type="text" id="negative_prompt" name="negative_prompt"><br>
-                <label for="steps">Количество шагов:</label><br>
-                <input type="number" id="steps" name="steps" min="1" max="100"><br>
-                <label for="batch_size">Количество генерируемых картинок:</label><br>
-                <input type="number" id="batch_size" name="batch_size" min="1" max="8"><br>
-                <input type="checkbox" id="restore_faces" name="restore_faces">
-                <label for="restore_faces">Восстановить лица</label><br>
-                <label for="denoising_strength">Подавление шума</label>
-                <input type="number" id="denoising_strength" min="0.01" max="1.00" value="0.50" step="0.01"><br>
-                <button type="submit">Сгенерировать изображение</button>
+                <select id="upscaleSelect"></select>
+                <label for="resize">Изменить размер:</label><br>
+                <input type="number" id="resize" name="resize" min="1" max="8" value="2" step="0.05"><br>
+                <button type="submit">Апскейл изображения</button>
             </form>
 
             <div class="progress-bar">
@@ -143,7 +134,7 @@
         </div>
     </div>
 
-    <script src="imgtoimg.js"></script>
+    <script src="upscale.js"></script>
 </body>
 
 </html>
