--- a/imgtoimg.html
+++ b/imgtoimg.html
@@ -19,11 +19,29 @@
     }
 
     #drop-area {
-        width: 100%;
-        border: 2px dashed #ccc;
-        margin-bottom: 20px;
-        position: relative;
-    }
+    width: 512px;
+    height: 512px;
+    border: 2px dashed #ccc;
+    margin-bottom: 20px;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+}
+
+    #drop-area img {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain;
+}
+
+    #drop-area .placeholder {
+    position: absolute;
+    text-align: center;
+    color: rgba(0, 0, 0, 0.5);
+    font-size: 18px;
+}
 
     #canvas {
         display: block;
@@ -58,6 +76,9 @@
         max-width: 100%;
         max-height: 100%;
         object-fit: contain;
+    }
+    #droppedImage {
+        display: none;
     }
 
     #prevBtn,
@@ -104,8 +125,9 @@
     <div id="container">
         <div id="left-section">
             <div id="drop-area" ondrop="drop(event)" ondragover="allowDrop(event)">
-                Перетащите сюда изображение
-                <canvas id="canvas"></canvas>
+                <div class="placeholder">Переместите изображение в эту область</div>
+                <img id="droppedImage" alt="Dropped Image">
+                <canvas id="canvas" style="display: none;"></canvas>
             </div>
         </div>
 
@@ -142,7 +164,12 @@
             </div>
         </div>
     </div>
-
+    <button id="editInpaint">Редактировать в Inpaint</button>
+    <button id="editUpscale">Апскейл изображения</button>
+    <br>
+    <a href="index.html">
+        <button>Назад</button><br><br>
+    </a>
     <script src="imgtoimg.js"></script>
 </body>
 
