--- a/inpaint.html
+++ b/inpaint.html
@@ -19,11 +19,32 @@
 	}
 
 	#drop-area {
-		width: 512px;
-		height: 512px;
-		border: 2px dashed #ccc;
-		margin-bottom: 20px;
-		position: relative;
+    width: 512px;
+    height: 512px;
+    border: 2px dashed #ccc;
+    margin-bottom: 20px;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+}
+
+    #drop-area img {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain;
+}
+
+    #drop-area .placeholder {
+    position: absolute;
+    text-align: center;
+    color: rgba(0, 0, 0, 0.5);
+    font-size: 18px;
+}
+
+	#droppedImage {
+		display: none;
 	}
 
 	#canvas {
@@ -118,9 +139,10 @@
 	<div id="container">
 		<div id="left-section">
 			<div id="drop-area" ondrop="drop(event)" ondragover="allowDrop(event)">
-				Перетащите сюда изображение
-				<canvas id="canvas"></canvas>
-			</div>
+                <div class="placeholder">Переместите изображение в эту область</div>
+                <img id="droppedImage" alt="Dropped Image" >
+                <canvas id="canvas" style="display: none;"></canvas>
+            </div>
 			<input type="range" id="brush-slider" min="1" max="20" value="5" step="1">
 			<button id="undo-button">Отменить</button>
 		</div>
@@ -160,7 +182,12 @@
 			</div>
 		</div>
 	</div>
-
+	<button id="editImgtoimg">Редактировать в img to img</button>
+    <button id="editUpscale">Апскейл изображения</button>
+	<br>
+    <a href="index.html">
+        <button>Назад</button><br><br>
+    </a>
 	<script src="inpaint.js"></script>
 </body>
 
