--- a/model.html
+++ b/model.html
@@ -25,7 +25,7 @@
     </select>
     <button onclick="selectModel()">Выбрать</button><br>
     <a href="index.html">
-        <button>Главная страница</button><br><br>
+        <button>Назад</button><br><br>
     </a>
 
     <script src="model.js"></script>
