--- a/txttoimg.html
+++ b/txttoimg.html
@@ -308,10 +308,18 @@
                                 <select id="samplerSelect"></select>
                             </div>
     
-                            <div class="options" style="display: flex">
+                            <div class="options"style="display: flex">
                                 <label for="steps">количество шагов:</label>
-                                <input type="range" id="steps" name="steps" min="1" max="100" value="20">
+                                <input type="range" id="steps" name="steps" min="1" max="100" value="20" oninput="this.nextElementSibling.value = this.value">
+                                <output for="steps" id="stepOutput">20</output>
                             </div>
+
+                            <script>
+                                document.getElementById('steps').addEventListener('input', function() {
+                                    document.getElementById('stepOutput').value = this.value;
+                                });
+                            </script>
+
                             <div class="options">
                                 <label for="cfg_scale">креативность:</label>
                                 <input type="number" id="cfg_scale" name="cfg_scale" min="1" max="30" value="7" step="0.5">
@@ -319,7 +327,13 @@
                             <div class="options" style="display: flex; margin-top: 4px;">
                                 <label for="batch_size">количество изображений:</label>
                                 <input type="range" id="batch_size" name="batch_size" min="1" max="8" value="1">
+                                <output for="batch_size" id="batch_sizeOutput">1</output>
                             </div>
+                            <script>
+                                document.getElementById('batch_size').addEventListener('input', function() {
+                                    document.getElementById('batch_sizeOutput').value = this.value;
+                                });
+                            </script>
                             <div class="resolution-input">
                                 <label for="width">разрешение</label>
                                 <input type="number" id="width" name="width" value="512" min="1">
@@ -353,7 +367,7 @@
 
         </div>
 
-        <div class="txt-to-img-container" style="margin-top: 15px;">  
+        <div class="txt-to-img-container" style="margin-top: 15px; ">  
             <div class="image-form-container-buttons">
                 <div class="generation-container">
                     <button id="submit">СГЕНЕРИРОВАТЬ</button>
@@ -364,14 +378,44 @@
                     </div>
                 </div>
             </div>
-            <div class="image-gallery-container" style="margin-left:33px;">
-                <div>
-                    <button id="editInpaint">Редактировать в Inpaint</button>
-                    <button id="editImgtoimg">Редактировать в img to img</button>
-                    <button id="editUpscale">Апскейл изображения</button>
+            <div class="image-gallery-container">
+                <div style="margin-left: 46px;">
+                    <button id="editInpaint"class="hidden">редактировать<br>в inpaint</button>
+                    <button id="editImgtoimg"class="hidden">редактировать<br>в img to img</button>
+                    <button id="editUpscale"class="hidden">редактировать<br>в upscale</button>
                 </div>
             </div>
         </div>
+
+            <style>
+                .image-gallery-container {
+                    margin-left: 33px;
+                }
+                .image-gallery-container div {
+                    display: flex;
+                    gap: 10px;
+                }
+                button {
+                    background-color: #e0e0e0; /* Светло-серый цвет фона */
+                    border: none; /* Убираем границу */
+                    border-radius: 10px; /* Скругленные углы */
+                    padding: 10px 20px; /* Внутренние отступы */
+                    font-family: 'Inter', sans-serif;
+                    font-weight: 600;
+                    font-size: 14px;
+                    color: black; /* Цвет текста */
+                    cursor: pointer; /* Курсор в виде руки при наведении */
+                    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1); /* Тень для кнопки */
+                    text-align: center; /* Центрирование текста */
+                }
+                button:hover {
+                    background-color: #d5d5d5; /* Изменение цвета при наведении */
+                }
+                .hidden {
+                    display: none;
+                        }
+                    </style>
+            
 
     <script src="renderer.js"></script>
 </body>
