--- a/index.html
+++ b/index.html
@@ -1,27 +1,68 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>app</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;500&display=swap" rel="stylesheet">
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            background-color: #f0f0f0; /* Optional: Background color to match the image background */
+            font-family: 'Inter', sans-serif;
+        }
+        .container {
+            text-align: left; /* Ensures text is aligned left */
+            background-color: #e0e0e0; /* Match the background color of the container in the image */
+            padding: 40px 80px;
+            border-radius: 8px;
+        }
+        .container a {
+            display: block;
+            margin: 10px 0;
+        }
+        button {
+            font-size: 36px;
+            font-weight: 500;
+            font-family: 'Inter', sans-serif;
+            width: 100%;
+            padding: 10px 0;
+            border: none;
+            background: none;
+            cursor: pointer;
+            text-align: left; /* Aligns text to the left */
+            color: #373737; /* Set the font color */
+            transition: color 0.3s; /* Smooth transition for color change */
+        }
+        button:hover {
+            color: #526af0; /* Change the font color on hover */
+        }
+    </style>
+    <title>Menu</title>
 </head>
 <body>
-    <a href="txttoimg.html">
-        <button>Текст в изображение</button><br><br>
-    </a>
-    <a href="imgtoimg.html">
-        <button>Изображение в изображение</button><br><br>
-    </a>
-    <a href="inpaint.html">
-        <button>Inpaint</button><br><br>
-    </a>
-    <a href="model.html">
-        <button>Выбор модели</button><br><br>
-    </a>
-    <a href="upscale.html">
-        <button>Апскейл изображения</button><br><br>
-    </a>
+    <div class="container">
+        <a href="model.html">
+            <button>Выбор модели</button>
+        </a>
+        <a href="txttoimg.html">
+            <button>Текст в изображение</button>
+        </a>
+        <a href="imgtoimg.html">
+            <button>Изображение в изображение</button>
+        </a>
+        <a href="inpaint.html">
+            <button>Изменить по выделенной области</button>
+        </a>
+        <a href="upscale.html">
+            <button>Апскейл изображения</button>
+        </a>
+    </div>
 </body>
 </html>
-
 
