--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
 <body>
     <div class="container">
         <a href="model.html">
-            <button>Выбор модели</button>
+            <button>Выбор модели генерации</button>
         </a>
         <a href="txttoimg.html">
-            <button>Текст в изображение</button>
+            <button>Текстовый запрос в изображение</button>
         </a>
         <a href="imgtoimg.html">
             <button>Изображение в изображение</button>
