--- a/model.html
+++ b/model.html
@@ -1,34 +1,112 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 
 <head>
-    <title>Выбор модели</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;500&display=swap" rel="stylesheet">
     <style>
-.notification {
-    position: fixed;
-    bottom: 10px;
-    left: 50%;
-    transform: translateX(-50%);
-    background-color: #333;
-    color: #fff;
-    padding: 10px;
-    border-radius: 5px;
-}
+        .back-button {
+            font-size: 30px;
+            text-decoration: none;
+            color: black;
+            font-weight: 300;
+            position: absolute;
+            top: 20px;
+            left: 20px;
+        }
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            background-color: #f0f0f0;
+            font-family: 'Inter', sans-serif;
+            position: relative;
+        }
+        .container {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            background-color: #e0e0e0;
+            padding: 40px 80px;
+            border-radius: 8px;
+        }
+        .container a {
+            display: block;
+            margin: 10px 0;
+        }
+        .file-input-container {
+            width: 100%;
+            display: flex;
+            justify-content: flex-start;
+        }
+        button {
+            font-size: 36px;
+            font-weight: 500;
+            font-family: 'Inter', sans-serif;
+            width: 100%;
+            padding: 10px 0;
+            border: none;
+            background: none;
+            cursor: pointer;
+            color: #373737;
+            transition: color 0.3s;
+            margin-top: 30px;
+        }
+        button:hover {
+            color: #526af0;
+        }
+        input[type="file"]::file-selector-button {
+            margin-right: 20px;
+            border: none;
+            background: #ccc;    
+            padding: 10px 20px;
+            border-radius: 10px;
+            color: #000; 
+            cursor: pointer;
+            transition: background 0.2s ease-in-out;
+            font-family: 'Inter', sans-serif;
+            font-weight: 500;
+        }
+        input[type="file"]::file-selector-button:hover {
+            background: #526af0; 
+            color: #fff; 
+        }
+        .notification {
+            position: fixed;
+            bottom: 10px;
+            left: 50%;
+            transform: translateX(-50%);
+            background-color: #333;
+            color: #fff;
+            padding: 10px;
+            border-radius: 5px;
+        }
     </style>
+    <title>Выбор модели</title>
 </head>
+
 <body>
-    <h1>Выберите модель для загрузки</h1>
-    <input type="file" id="modelFileInput">
-    <button onclick="uploadModel()">Загрузить модель</button><br>
-    <h1>Выберите модель</h1>
-    <select id="modelSelect">
-    </select>
-    <button onclick="selectModel()">Выбрать</button><br>
-    <a href="index.html">
-        <button>Назад</button><br><br>
-    </a>
+    <a href="index.html" class="back-button">назад</a>
+    <div class="container">
+        <div class="file-input-container">
+            <input type="file" id="modelFileInput">
+        </div>
+        <button onclick="uploadModel()">Загрузить модель</button><br><br>
+        
+        <select id="modelSelect"></select>
+        <button onclick="selectModel()">Выбрать</button><br><br>
+    </div>
 
     <script src="model.js"></script>
-    
 </body>
+
 </html>
+
+
