--- a/imgtoimg.html
+++ b/imgtoimg.html
@@ -441,20 +441,20 @@
                     gap: 10px;
                 }
                 button {
-                    background-color: #e0e0e0; /* Светло-серый цвет фона */
-                    border: none; /* Убираем границу */
-                    border-radius: 10px; /* Скругленные углы */
-                    padding: 10px 20px; /* Внутренние отступы */
+                    background-color: #e0e0e0; 
+                    border: none; 
+                    border-radius: 10px; 
+                    padding: 10px 20px; 
                     font-family: 'Inter', sans-serif;
                     font-weight: 600;
                     font-size: 14px;
-                    color: black; /* Цвет текста */
-                    cursor: pointer; /* Курсор в виде руки при наведении */
-                    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1); /* Тень для кнопки */
-                    text-align: center; /* Центрирование текста */
+                    color: black; 
+                    cursor: pointer; 
+                    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1); 
+                    text-align: center; 
                 }
                 button:hover {
-                    background-color: #d5d5d5; /* Изменение цвета при наведении */
+                    background-color: #d5d5d5; 
                 }
                 .hidden {
                     display: none;
