--- a/inpaint.html
+++ b/inpaint.html
@@ -381,7 +381,7 @@
                                 });
                             </script>
                             <div class="options"style="display: flex">
-                                <label for="denoising_strength">подавление шума</label>
+                                <label for="denoising_strength">сила подавления шума:</label>
                                 <input type="range" id="denoising_strength" min="0.01" max="1.00" value="0.50" step="0.01">
                                 <output for="denoising_strength" id="denoising_strengthOutput">0.50</output>
                             </div>
@@ -446,8 +446,8 @@
             </div>
             <div class="image-gallery-container">
                 <div style="margin-left: 46px;">
-                    <button id="editImgtoimg"class="hidden">редактировать<br>в img to img</button>
-                    <button id="editUpscale"class="hidden">редактировать<br>в upscale</button>
+                    <button id="editImgtoimg" class="hidden">редактировать<br>в img to img</button>
+                    <button id="editUpscale" class="hidden">редактировать<br>в upscale</button>
                 </div>
             </div>
         </div>
