--- a/imgtoimg.html
+++ b/imgtoimg.html
@@ -377,7 +377,7 @@
                                 });
                             </script>
                             <div class="options"style="display: flex">
-                                <label for="denoising_strength">подавление шума</label>
+                                <label for="denoising_strength">сила подавления шума:</label>
                                 <input type="range" id="denoising_strength" min="0.01" max="1.00" value="0.50" step="0.01">
                                 <output for="denoising_strength" id="denoising_strengthOutput">0.50</output>
                             </div>
